--- a/app/src/main/res/layout/content_nearby.xml
+++ b/app/src/main/res/layout/content_nearby.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -11,26 +11,34 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:showIn="@layout/app_bar_nearby"
-    tools:context="spblife.walk.NearbyActivity">
+    tools:context="spblife.walk.NearbyActivity"
+    android:orientation="vertical">
+    <ru.yandex.yandexmapkit.MapView
+        android:id="@+id/map"
+        android:layout_width="fill_parent"
+        android:layout_height="300dip"
+        android:apiKey="IN1RJIohJJ9wUolNvq4b5OtkfPbikhBfvo8K8z2N5xlB2GPAmiA1UQRJu~56gSpQPjVxsr2YtFcA4GLaT3ISP9bdwtXocvvqziZQ391QDFQ="
+        android:tag="static"
+        />
 
-    <ScrollView
-        android:id="@+id/mapScrollView"
+    <TextView
+        android:id="@+id/text_places"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-        <LinearLayout
-            android:id="@+id/mapLinearView"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:orientation="vertical" >
+        android:layout_height="match_parent"
+        android:scrollbars="vertical"/>
+    <!--<ScrollView-->
+        <!--android:id="@+id/mapScrollView"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content" >-->
+        <!--<LinearLayout-->
+            <!--android:id="@+id/mapLinearView"-->
+            <!--android:layout_width="fill_parent"-->
+            <!--android:layout_height="fill_parent"-->
+            <!--android:orientation="vertical" >-->
+            <!---->
 
-            <ru.yandex.yandexmapkit.MapView
-                android:id="@+id/map"
-                android:layout_width="fill_parent"
-                android:layout_height="300dip"
-                android:apiKey="IN1RJIohJJ9wUolNvq4b5OtkfPbikhBfvo8K8z2N5xlB2GPAmiA1UQRJu~56gSpQPjVxsr2YtFcA4GLaT3ISP9bdwtXocvvqziZQ391QDFQ="
-                android:tag="static"
-                />
 
-        </LinearLayout>
-    </ScrollView>
-</RelativeLayout>
+        <!--</LinearLayout>-->
+        <!---->
+    <!--</ScrollView>-->
+</LinearLayout>
